--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -38,7 +38,8 @@ and let $\vec u = \vec u(\vec x) = ( u_1(\vec x), u_2(\vec x)) = ( u_1(x_1, x_2)
 
 \pause
 
-\notesonly{-conservation of probability. The probability of the event $(x_1,x_2)$ should equal the probability of its counterpart in $(u_1,u_2)$ and vice-versa.}
+-conservation of probability.
+\notesonly{The probability of the event $(x_1,x_2)$ should equal the probability of its counterpart in $(u_1,u_2)$ and vice-versa.}
 
 \svspace{-3mm}
 
@@ -69,19 +70,21 @@ The area of the small rectangle in $\Omega$ is $A = dx_1\, dx_2$.\\
 \end{center}
 
 The area of the small rectangle in $\Omega$ is $A = dx_1\, dx_2$\notesonly{.\\
-The goal is to show that in order for probability to be conserved}, the areas on both spaces have to be equal.
+The goal is to show that in order for probability to be conserved}, we need to know by how much the area will grow or shrink as we move between the spaces and eventually compensate for this change.
 
 \pause
 
-This implies the following equality:
+This implies the following relationship:
 \begin{equation}
 \int_{\Omega} f(\vec{x}) \mathbf{d}\vec{x}
-=\int_{u(\Omega)} f({\vec x(\vec u)}) \frac{1}{\left|\det \frac{\partial \vec{u}(\vec{x})}{\partial \vec{x}} \right|} \mathbf{d}\vec{u}.
+=\int_{u(\Omega)} f({\vec x(\vec u)}) \frac{1}{\left|\det \frac{\partial \vec{u}(\vec{x})}{\partial \vec{x}} \right|} \mathbf{d}\vec{u},
 \end{equation}
+
+which we will now derive.
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Conservation of probability}
 
 \slidesonly{
 
@@ -91,7 +94,7 @@ This implies the following equality:
 \end{center}
 }
 
-
+\only<1>{
 
 \begin{itemize}
 \item Because $dx_1$ and $dx_2$ are \emph{infinitesimally small} we can consider the mapping 
@@ -101,24 +104,63 @@ $\vec u$ to act as a \emph{linear transformation}, resulting in a different shap
 \item If we want to go back from $u(\Omega)$ to $\Omega$ we only need $\frac{1}{\text{ratio}}$.
 \end{itemize}
 
+}
+
+\only<2>{
+
+
+\underline{Important}:
+Approximating the above as a linear transformation (i.e. a small rectangle turns into a parallelogram) only holds for very small $d\vec x$.
+
+
+}
+
+\only<3>{
+
+Before we can compute the area of the parallelogram in $u(\Omega)$ we need to find out what the vectors ${\color{blue}\vec e_1}, {\color{red}\vec e_2}$ map to in $u(\Omega)$.
+
+\question{How do we get the area of the parallelogram?}
+
+From vector calculus:
+\notesonly{
+
+The area of the parallelogram is the magnitude of the cross product between the two vectors.
+}
+
+\svspace{-3mm}
+
+\begin{equation}
+A_{\text{parr.}} = \big| \vec u({\color{blue}\vec e_1}) \times \vec u({\color{red}\vec e_2}) \big|
+\end{equation}
+
+}
+
 \end{frame} 
 
 
-\underline{Important:}
-Approximating the above as a linear transformation (i.e. a small rectangle turns into a parallelogram) only holds because for very small $d\vec x$.
-
-To get the area of the parallelogram in $u(\Omega)$ we need to find out what $\vec u(dx_1, dx_2))$ is.
-The area of the parallelogram then becomes the magnitude of the cross product between the components of $\vec u(\vec x)$.
 
 \newpage
 
-We first only consider the vector due to $dx_1$ in blue:
+\subsubsection{Mapping the vectors}
 
+\begin{frame}{\subsubsecname}
+
+We first only consider the vector due to ${\color{blue}dx_1}$:
+
+\svspace{-5mm}
+
+\begin{center}
 \includegraphics[width=0.75\textwidth]{img/x1.pdf}
+\notesonly{\captionof{figure}{Mapping the first component}}
+\end{center}
 
-The difference vector between the two correspsonding points in $u(\Omega)$ becomes:
+\svspace{-3mm}
 
-\begin{equation*}
+\pause
+
+The difference vector\notesonly{ between the two correspsonding points} in $u(\Omega)$ becomes:
+
+\begin{equation}
 \begin{array}{r}
 \rmat{
 u_1 (x_1 + dx_1, x_2)\\
@@ -134,35 +176,141 @@ u_1 (x_1 + dx_1, x_2) - u_1 (x_1, x_2)\\
 u_2 (x_1 + dx_2, x_2) - u_2 (x_1, x_2)
 }
 \end{array}
-\end{equation*}
+\end{equation}
 
-Because $dx_1$ is so small, we can approximate the transformed vector by the derivative, 
-which is essentially taking the limit. The difference vector in $u(\Omega)$ becomes:
+\end{frame}
 
-$$
-u: \vec e_1 \mapsto 
+\begin{frame}{\subsubsecname}
+
+\slidesonly{
+\svspace{-5mm}
+\begin{center}
+\includegraphics[width=0.75\textwidth]{img/x1.pdf}
+\notesonly{\captionof{figure}{Mapping the first component}}
+\end{center}
+
+\svspace{-2mm}
+
+\begin{equation}
+\begin{array}{r}
+\rmat{
+u_1 (x_1 + dx_1, x_2) - u_1 (x_1, x_2)\\
+u_2 (x_1 + dx_2, x_2) - u_2 (x_1, x_2)
+}
+\end{array}
+\end{equation}
+}
+
+\pause
+
+Because $dx_1$ is so small, \only<4->{we can approximate the transformed vector by the derivative, 
+which is essentially taking the limit $dx_1 \rightarrow 0$.\\
+The difference vector in $u(\Omega)$ becomes:}
+
+\only<3>{
+\slidesonly{
+\begin{center}
+\includegraphics[width=0.2\textwidth]{img/meme_notthisagain}
+\end{center}
+}
+}
+
+\svspace{-3mm}
+
+\only<5>{
+\begin{equation}
+u: {\color{blue}\vec e_1} \mapsto 
 \rmat{
 \frac{\partial u_1}{\partial x_1} \Delta x_1\\[0.2cm]
 \frac{\partial u_2}{\partial x_1} \Delta x_1
 }
+\end{equation}
+}
+
+\end{frame}
+
+\begin{frame}{\subsubsecname}
+
+\slidesonly{
+\begin{center}
+\includegraphics[width=0.6\textwidth]{img/u}
+\end{center}
+}
+
+\question{What about ${\color{red}dx_2}$?}
+
+\pause
+
+- We use the same procedure on ${\color{red}\vec e_2}$:
+
+\begin{equation}
+u: {\color{red}\vec e_2} \mapsto 
+\rmat{
+\frac{\partial u_1}{\partial x_2} \Delta x_2\\[0.2cm]
+\frac{\partial u_2}{\partial x_2} \Delta x_2
+}
+\end{equation}
+
+\end{frame}
+
+\begin{frame}{Computing the area of the paralellogram}
+
+\svspace{-5mm}
+
+\slidesonly{
+\begin{center}
+\includegraphics[width=0.6\textwidth]{img/u}
+\end{center}
+}
+
+\slidesonly{
+
+\svspace{-5mm}
+
+\begin{center}
 $$
-
-\question{What about $dx_2$?}
-
-- We use the same procedure (one the red vector $\vec e_2$) and get:
-
-$$
-u: \vec e_2 \mapsto 
+u: {\color{blue}\vec e_1} \mapsto 
+\rmat{
+\frac{\partial u_1}{\partial x_1} \Delta x_1\\[0.2cm]
+\frac{\partial u_2}{\partial x_1} \Delta x_1
+}
+\qquad\qquad
+u: {\color{red}\vec e_2} \mapsto 
 \rmat{
 \frac{\partial u_1}{\partial x_2} \Delta x_2\\[0.2cm]
 \frac{\partial u_2}{\partial x_2} \Delta x_2
 }
 $$
+\end{center}
+
+}
 
 The area of the parallelogram spanned by the two difference vectors in $u(\Omega)$ 
 is the magnitude of their cross product:
-\begin{align*}
-&\left| \; 
+\slidesonly{
+$$
+A_{\text{parr.}} = \left| \; 
+\rmat{
+\frac{\partial u_1}{\partial x_1} \Delta x_1\\[0.2cm]
+\frac{\partial u_2}{\partial x_1} \Delta x_1
+}
+\times
+\rmat{
+\frac{\partial u_1}{\partial x_2} \Delta x_2\\[0.2cm]
+\frac{\partial u_2}{\partial x_2} \Delta x_2
+}
+\; \right|
+$$
+}
+
+\end{frame}
+
+\begin{frame}{Computing the area of the paralellogram}
+
+\svspace{-3mm}
+
+\begin{align}
+A_{\text{parr.}} &= \left| \; 
 \rmat{
 \frac{\partial u_1}{\partial x_1} \Delta x_1\\[0.2cm]
 \frac{\partial u_2}{\partial x_1} \Delta x_1
@@ -182,17 +330,42 @@ is the magnitude of their cross product:
 }_{\text{the Jacobian determinant}}
 \; \right| \Delta x_1 \Delta x_2 \\
 &= 
-\left| \; \det \quad
+\left| \; \det\,
 \underbrace{
 \left(
 \frac{\partial (u_1, u_2)}{\partial (x_1,x_2)}
 \right)
 }_{\text{the Jacobian}}
-\; \right| \Delta x_1 \Delta x_2
-\end{align*}
+\; \right| \, \underbrace{\Delta x_1 \Delta x_2}_{\substack{\text{Original area}\\ \text{in }\Omega}}
+\end{align}
 
-This matrix of partial derivatives is called the \emph{Jacobian}:
+\end{frame}
+
+
+\begin{frame}{The Jacobian}
+
+\svspace{-3mm}
+
+\slidesonly{
 $$
+\begingroup
+\footnotesize
+\underbrace{
+A_{\text{parr.}} }_{\text{in }u(\Omega)}= 
+\bigg| \; \det\,
+\underbrace{
+\left(
+\frac{\partial (u_1, u_2)}{\partial (x_1,x_2)}
+\right)
+}_{\text{the Jacobian}}
+\; \bigg| \, \underbrace{\Delta x_1 \Delta x_2}_{\substack{\text{Original area}\\ \text{in }\Omega}}
+\endgroup
+$$
+}
+
+\only<1>{
+This matrix of partial derivatives is called the \emph{Jacobian}:
+\begin{equation}
 \frac{\partial (u_1, u_2)}{\partial (x_1,x_2)} = 
 \frac{\partial (u_1(\vec x), u_2(\vec x))}{\partial (x_1,x_2)} = 
 \frac{\partial (\vec u(\vec x))}{\partial (\vec x)} =
@@ -207,17 +380,107 @@ $$
 \text{partial derivatives}
 }%substack
 }
-$$
+\end{equation}
+}
 
-If we are given an area spanned by too small vectors (e.g. $\vec e_1$, $\vec e_2$) 
-we can compute the area of the corresponding parallelogram in $u(\Omega)$ 
-by multiplying the original area by the Jacobian determinant.
+\end{frame}
+
+\begin{frame}{Conservation of Probability}
+
+\svspace{-3mm}
+
+\slidesonly{
+$$
+\begingroup
+\footnotesize
+\underbrace{
+A_{\text{parr.}} }_{\text{in }u(\Omega)}= 
+\bigg| \; \det\,
+\underbrace{
+\left(
+\frac{\partial (u_1, u_2)}{\partial (x_1,x_2)}
+\right)
+}_{\text{the Jacobian}}
+\; \bigg| \, \underbrace{\Delta x_1 \Delta x_2}_{\substack{\text{Original area}\\ \text{in }\Omega}}
+\endgroup
+$$
+}
+\svspace{-3mm}
+
+\question{What is the takeaway from this?}
+
+\slidesonly{
+\svspace{-5mm}
+
+\begin{center}
+\includegraphics[width=0.55\textwidth]{img/u}
+\end{center}
+}
+
+\pause
+
+-\notesonly{If we are }given an area in $N$-dim space $\Omega$ spanned by $N$ small vectors ${\color{blue}\vec e_1}$, ${\color{red}\vec e_2},\ldots,\vec e_N$,
+\notesonly{we can compute the area of the corresponding parallelogram in $u(\Omega)$ 
+by multiplying the original area by the Jacobian determinant, i.e.
+}
+
+\svspace{-5mm}
+
+\begin{equation}
+A_{\text{parr.} \text{in }u(\Omega)}  = 
+\Big| \; \det\, \overbrace{\text{Jacobian}}^{N \times N}
+\; \Big| \, A_{\text{in }\Omega}
+\end{equation}
+
+\end{frame}
+
+\subsubsection{Inverse mapping}
+
+\begin{frame}{Conservation of probability}
+
+\svspace{-3mm}
+
+\slidesonly{
+$$
+\begingroup
+\footnotesize
+\underbrace{
+A_{\text{parr.}} }_{\text{in }u(\Omega)}= 
+\bigg| \; \det\,
+\underbrace{
+\left(
+\frac{\partial (u_1, u_2)}{\partial (x_1,x_2)}
+\right)
+}_{\text{the Jacobian}}
+\; \bigg| \, \underbrace{\Delta x_1 \Delta x_2}_{\substack{\text{Original area}\\ \text{in }\Omega}}
+\endgroup
+$$
+}
+
+\svspace{-3mm}
+
 
 \question{What if we want to transform from $u(\Omega)$ back to $\Omega$?}
 
-\includegraphics[width=0.7\textwidth]{img/reverse.pdf}
 
-We apply the inverse mapping. A very small rectangle in $u(\Omega)$ transforms into a parallelogram in $\Omega$. 
+\only<1>{
+\slidesonly{
+\begin{center}
+\includegraphics[width=0.5\textwidth]{img/meme_goback}
+\end{center}
+}
+}
+
+\pause
+
+\svspace{-7mm}
+
+\begin{center}
+\includegraphics[width=0.6\textwidth]{img/reverse.pdf}
+\notesonly{\captionof{figure}{Inverse mapping}}
+\end{center}
+
+We apply the inverse mapping.\notesonly{ A very small rectangle in $u(\Omega)$ transforms into a parallelogram in $\Omega$.} 
 This reverse transformation would require the inverse of the above matrix of partial derivatives.
 The matrix of partial derivatives tells us how to transform infinitesimally small vectors back and forth.
 
@@ -246,26 +509,36 @@ The matrix of partial derivatives tells us how to transform infinitesimally smal
 %b
 %$$
 
+\end{frame}
+
+\begin{frame}{\subsubsecname}
+
 \question{Do we really have to compute the inverse of the matrix?}
 
+\pause
+
 - No, the determinant of the inverse matrix is 1 / det of the original matrix:
-$$
+\begin{equation}
 \frac{1}{\left| \det \left( \frac{\partial \vec u}{\partial \vec x} \right) \right|} =
 {\left| \det \left( \frac{\partial \vec x}{\partial \vec u} \right) \right|}
-$$
+\end{equation}
+
+\end{frame}
+
+\begin{frame}{Summary}
 
 \underline{Transformation between probability densities:}
 
 Conservation of probability: The area represents the probability of the event, 
-transforming it into another space should nt cause any increase or decrease in the probability of the event.
+transforming it into another space should not cause any increase or decrease in the probability of the event.
 
 Therefore, if we multiply the area of the rectangle in $\Omega$ by the pdf $f(\vec x)$ at $\vec x$, we get the probability of the parallelogram in $u(\Omega)$:
 
-$$
+\begin{align}
 \int_{\Omega} f(\vec{x}) \mathbf{d}\vec{x}
-=\int_{u(\Omega)} f({\vec x(\vec u)}) \left|\det \frac{\partial \vec{x}(\vec{u})}{\partial \vec{u}} \right| \mathbf{d}\vec{u}
-$$
-$$
-=\int_{u(\Omega)} f({\vec x(\vec u)}) \frac{1}{\left|\det \frac{\partial \vec{u}(\vec{x})}{\partial \vec{x}} \right|} \mathbf{d}\vec{u}.
-$$
+&=\int_{u(\Omega)} f({\vec x(\vec u)}) \left|\det \frac{\partial \vec{x}(\vec{u})}{\partial \vec{u}} \right| \mathbf{d}\vec{u}\\
+&=\int_{u(\Omega)} f({\vec x(\vec u)}) \frac{1}{\left|\det \frac{\partial \vec{u}(\vec{x})}{\partial \vec{x}} \right|} \mathbf{d}\vec{u}.
+\end{align}
+
+\end{frame}
 
